--- a/src/restaurant/index.html
+++ b/src/restaurant/index.html
@@ -1,28 +1,60 @@
-<!--<header class="navbar navbar-static-top">-->
-<!--<h2 class="bd-title" id="my-app-title">Angular Starter App</h2>-->
-<!--<div ngbDropdown id="my-nav-menu">-->
-<!--<button class="btn btn-outline-primary" id="dropdownMenu3" ngbDropdownToggle>Navigation Menu</button>-->
-<!--<div class="dropdown-menu" aria-labelledby="dropdownMenu3">-->
-<!--<button *ngFor="let view of views" [routerLink]="view.link" class="dropdown-item">{{view.name}}</button>-->
-<!--</div>-->
-<!--</div>-->
-<!--</header>-->
-<!--<router-outlet (activate)="activateEvent($event)" (deactivate)="deactivateEvent($event)"></router-outlet>-->
-<!--<my-store-devtools *ngIf="showMonitor"></my-store-devtools>-->
+﻿<!DOCTYPE html>
+
+<html lang="en">
+
+
+<head>
+
+  <title>Ristorante Il Fornello</title>
+
+</head>
+
+
+<body>
+
+
 <header>
-  <div class="header-content">
-    <h1>Ristorante Il Fornello</h1>
-    <p style="padding:40px;"></p>
-    <p>Simple, fresh ingredients, prepared and cooked with love and passion become<br> truly great dishes, from
-      wood-oven baked Neapolitan style pizzas to pastas, entrees!</p>
+
+
+  <div>
+
+    <div>
+
+      <div>
+
+        <h1>Ristorante Il Fornello</h1>
+
+        <p style="padding:40px;"></p>
+
+        <p>Simple, fresh ingredients, prepared and cooked with love and passion become truly great dishes, from
+          wood-oven baked Neapolitan style pizzas to pastas, entrees!</p>
+
+      </div>
+
+      <div>
+
+      </div>
+
+    </div>
+
   </div>
+
 </header>
 
 
-<section class="main-content">
+<div>
 
-  <article class="row">
-    <div class="col-md-8">
+  <div>
+
+    <div>
+
+      <p style="padding:20px;"></p>
+
+      <h3 align=center>Our Unique Culinary Creations</h3>
+
+    </div>
+
+    <div>
 
       <h2>Fichipizza</h2>
 
@@ -32,19 +64,21 @@
       <p><a href="#">More &raquo;</a></p>
 
     </div>
-    <div class="col-md-4">
 
-      <h3 class="text-center">Our Unique Culinary Creations</h3>
+  </div>
+
+
+  <div>
+
+    <div>
+
+      <p style="padding:20px;"></p>
+
+      <h3 align=center>This Month's Promotions</h3>
 
     </div>
-  </article>
-  <article class="row">
 
-    <div class="col-md-4">
-      <h3>This Month's Promotions</h3>
-    </div>
-
-    <div class="col-md-8">
+    <div>
 
       <h2>Weekend Grand Buffet</h2>
 
@@ -55,38 +89,48 @@
 
     </div>
 
-  </article>
-  <article class="row">
-    <div class="col-md-8">
-      <h2>Tommy McHugh</h2>
-      <h4>Executive Chef</h4>
-      <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who
-        in the culinary world, he specializes in creating mouthwatering Mediterranean-Italian experiences. </p>
-      <p><a href="#">More &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
+  </div>
+
+
+  <div>
+
+    <div>
 
       <p style="padding:20px;"></p>
 
-      <h3>Meet our Culinary Specialists</h3>
+      <h3 align=center>Meet our Culinary Specialists</h3>
 
     </div>
-  </article>
 
-</section>
+    <div>
+
+      <h2>Tommy McHugh</h2>
+
+      <h4>Executive Chef</h4>
+
+      <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who
+        in the culinary world, he specializes in creating mouthwatering Mediterranean-Italian experiences. </p>
+
+      <p><a href="#">More &raquo;</a></p>
+
+    </div>
+
+  </div>
+
+</div>
 
 
 <footer>
 
   <div>
 
-    <div class="row">
+    <div>
 
-      <div class="col-md-4">
+      <div>
 
         <h5>Links</h5>
 
-        <ul class="footer-links">
+        <ul>
 
           <li><a href="#">Home</a></li>
 
@@ -100,7 +144,7 @@
 
       </div>
 
-      <div class="col-md-4">
+      <div>
 
         <h5>Our Address</h5>
 
@@ -119,8 +163,11 @@
           Email: <a href="mailto:ilfornello@food.net">ilfornello@food.net</a>
 
         </address>
+
       </div>
-      <div class="col-md-4">
+
+      <div>
+
         <div style="padding: 40px 10px;">
 
           <a href="http://google.com/+">Google+</a>
@@ -136,12 +183,25 @@
           <a href="mailto:">Mail</a>
 
         </div>
+
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <p class="text-center text-gray-dark text-sm-center">© Copyright 2015 Ristorante Il Fornello</p>
+
+      <div>
+
+        <p style="padding:10px;"></p>
+
+        <p align=center>© Copyright 2015 Ristorante Il Fornello</p>
+
       </div>
+
     </div>
+
   </div>
+
 </footer>
+
+
+</body>
+
+
+</html>
